[gd_scene load_steps=2 format=2]

[ext_resource path="res://pause_scene.gd" type="Script" id=1]

[node name="pause_scene" type="HBoxContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -10.0
margin_right = 512.0
margin_bottom = 10.0
alignment = 1
script = ExtResource( 1 )

[node name="ContinueBtn" type="Button" parent="."]
margin_left = 458.0
margin_right = 527.0
margin_bottom = 20.0
text = "Continue"

[node name="ExitBtn" type="Button" parent="."]
margin_left = 531.0
margin_right = 566.0
margin_bottom = 20.0
text = "Exit"

[connection signal="pressed" from="ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
